@@ -254,6 +254,7 @@ enum {
     F_IRR,
     F_LOGISTIC,
     F_INVMILLS,
+    F_ERRMSG,
     F1_MAX,	  /* SEPARATOR: end of single-arg functions */
     F_COR,
     F_COV,
