@@ -7,14 +7,19 @@ version 1.9.4, in progress
   GUI for panel plots
 - New function, inlist(): gives the position of a series
   within a named list or zero if the series is not present
+- New function, errmsg(): returns the gretl error message
+  associated with a given integer error code
 - New "set" variable, matrix_mask, which can be used to
   control the included observations when constructing
   matrices from series
 - Accessors $test and $pvalue: generalize to allow matrix
   values (e.g. from the coint2 command)
+- "catch" modifier for commands: make this catch a wider
+  range of errors
 - Functions corr(), cov() and fcstats(): accept two vector
   arguments in place of two series
 - Allow deletion of locale matrices within functions
+- Remove deprecated aliases "noecho" and "seed"
 - Fix bug: estimates could get out of order for some
   equation systems if the constant was not given in first
   place among the regressors
